add new versions

--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,8 @@
         }
     ],
     "require": {
-        "php": "^7.4",
-        "illuminate/contracts": "^8.73",
+        "php": "^7.4|^8.0",
+        "illuminate/contracts": "^8.73|^9.0",
         "php-amqplib/php-amqplib": ">=3.0",
         "ext-json": "*"
     },
