added costume event

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,11 @@
             "name": "Mohammadhossein Fereydouni",
             "email": "mohammadhfereydouni@gmail.com",
             "role": "Developer"
+        },
+        {
+            "name": "Sajjad Ranjbar",
+            "email": "sajadranjabr1911@gmail.com",
+            "role": "Developer"
         }
     ],
     "require": {
