--- a/composer.json
+++ b/composer.json
@@ -26,17 +26,16 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0",
-        "illuminate/contracts": "^8.73|^9.0",
+        "php": "^8.1",
+        "illuminate/contracts": "^10",
         "php-amqplib/php-amqplib": ">=3.0",
         "ext-json": "*"
     },
     "require-dev": {
-        "nunomaduro/collision": "^5.10",
-        "nunomaduro/larastan": "^1.0",
-        "orchestra/testbench": "^6.22",
+        "nunomaduro/collision": "^6",
+        "nunomaduro/larastan": "^2.0",
+        "orchestra/testbench": "^8",
         "pestphp/pest": "^1.21",
-        "pestphp/pest-plugin-laravel": "^1.1",
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan-deprecation-rules": "^1.0",
         "phpstan/phpstan-phpunit": "^1.0",
